--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,7 @@
 	   <title>Mt site</title>
 	</head>
 	<body>
-	     <h1>This is my site</h1>
+	     <h1>This is my site. it will contain personnal information</h1>
+		<p>Hi my name is Albaraa</p>
 	</body>
 </html>
